--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "vee-validate": "^4.7.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^16.11.56",
