--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.1.2",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^9.0.0",
     "vee-validate": "^4.7.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
