get add data to server

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_FB_KEY=AIzaSyAipfboHfPwSVdenp-XMOXiVtLS9eHTap0
+VITE_FB_UL=https://vuex-project-f48cc-default-rtdb.europe-west1.firebasedatabase.app
