--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "node_modules/@types/webpack-env/index.d.ts"
   ],
   "compilerOptions": {
+    "lib": ["es2018", "dom", "esnext"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
